// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar with breast cancer logo 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky appBar lims-navbar MuiAppBar-colorPrimary MuiPaper-elevation4"
    data-testid="navbar"
  >
    <h6
      class="MuiTypography-root nonProductionWarning MuiTypography-h6"
      data-testid="non-production-warning"
    >
      THIS IS A STAGING SERVER. DO NOT ENTER REAL DATA.
    </h6>
    <div
      class="MuiToolbar-root MuiToolbar-regular toolbar"
    >
      <div
        class="left"
        data-testid="navbar-left"
      >
        <button
          aria-label="Menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="main-nav-button"
          id="main-nav-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          breadcrumbs
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          left
        </p>
      </div>
      <div
        class="center"
        data-testid="navbar-center"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          center
        </p>
      </div>
      <div
        class="right"
        data-testid="navbar-right"
      >
        <svg
          data-testid="breast-cancer-ribbon"
          height="35"
          role="img"
          viewBox="39.39 1.172 324.975 406.495"
          width="35"
        >
          <title>
            Breast Cancer Ribbon
          </title>
          <g
            fill="#f69"
            stroke="#fff"
            stroke-width="2"
          >
            <path
              d="M151.036 14.728c25.248-10.863 49.059-12.879 83.902-2.032 4.07 4.166-3.577 48.009-3.577 48.009-30.696-14.182-48.263-17.126-78.959 3.312.001 0-12.595-39.276-1.366-49.289z"
            />
            <path
              d="M148.884 15.616c15.829-18.318 83.555-16.483 100.39-3.109s27.662 100.138-4.28 73.443c-31.942-26.695-57.746-26.199-94.475 5.068 0 0-17.464-57.083-1.635-75.402z"
            />
            <path
              d="M253.848 21.385s-4.317-35.721 22.636 63.323c26.955 99.044-137.336 313.352-154.053 313.352l-81.177-33.15C222.173 204.117 258.487 48.529 253.848 21.385z"
            />
            <path
              d="M144.968 29.993s4.907-35.721-25.729 63.323C88.604 192.36 275.333 406.667 294.333 406.667l68.308-56.148C200.202 251.725 139.696 57.137 144.968 29.993z"
            />
          </g>
        </svg>
        <div
          class="brand"
        >
          <div
            data-testid="navbar-spec-logo"
          >
            Logo
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          right
        </p>
      </div>
    </div>
  </header>
</div>
`;

exports[`render default Sidebar 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky appBar lims-navbar MuiAppBar-colorPrimary MuiPaper-elevation4"
    data-testid="navbar"
  >
    <h6
      class="MuiTypography-root nonProductionWarning MuiTypography-h6"
      data-testid="non-production-warning"
    >
      THIS IS A STAGING SERVER. DO NOT ENTER REAL DATA.
    </h6>
    <div
      class="MuiToolbar-root MuiToolbar-regular toolbar"
    >
      <div
        class="left"
        data-testid="navbar-left"
      >
        <button
          aria-label="Menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="main-nav-button"
          id="main-nav-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          breadcrumbs
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          left
        </p>
      </div>
      <div
        class="center"
        data-testid="navbar-center"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          center
        </p>
      </div>
      <div
        class="right"
        data-testid="navbar-right"
      >
        <div
          class="brand"
        >
          <div
            data-testid="navbar-spec-logo"
          >
            Logo
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          right
        </p>
      </div>
    </div>
  </header>
</div>
`;

exports[`render default Sidebar 2`] = `
<div
  aria-hidden="true"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky appBar lims-navbar MuiAppBar-colorPrimary MuiPaper-elevation4"
    data-testid="navbar"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular toolbar"
    >
      <div
        class="left"
        data-testid="navbar-left"
      >
        <button
          aria-label="Menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="main-nav-button"
          id="main-nav-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          breadcrumbs
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          left
        </p>
      </div>
      <div
        class="center"
        data-testid="navbar-center"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          center
        </p>
      </div>
      <div
        class="right"
        data-testid="navbar-right"
      >
        <div
          class="brand"
        >
          <div
            data-testid="navbar-spec-logo"
          >
            Logo
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          right
        </p>
      </div>
    </div>
  </header>
</div>
`;
